[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'claude-account'
version = '0.1.0'
description = 'Manually switch between multiple Claude Code accounts by swapping local credentials.'
readme = 'README.md'
requires-python = '>=3.9'
license = 'MIT'
license-files = ['LICENSE']
authors = [{ name = 'Filipp Balakin' }]
keywords = ['claude', 'claude-code', 'cli', 'account', 'credentials', 'oauth']
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities',
]
dependencies = []

[project.urls]
Homepage = 'https://github.com/Barsoomx/claude-account'
Repository = 'https://github.com/Barsoomx/claude-account'
Issues = 'https://github.com/Barsoomx/claude-account/issues'

[project.scripts]
claude-account = 'claude_account.cli:main'

[dependency-groups]
dev = ['pytest>=8']

[tool.hatch.build.targets.wheel]
packages = ['src/claude_account']
